switch to new GoldenGATE application core